Fix scrolling on Firefox and Edge

--- a/static/main.css
+++ b/static/main.css
@@ -34,10 +34,17 @@ body .page {
     margin-bottom: 300px;
 }
 
+#root {
+    height: 100%;
+}
+
+.root-panel {
+    height: 100%;
+}
+
 #game-panel {
     width: 100%;
     height: 100%;
-    position: absolute;
 }
 
 #game-panel .exit-link {
@@ -50,7 +57,6 @@ body .page {
 #canvas-container {
     width: 100%;
     height: 100%;
-    position: absolute;
 }
 
 canvas.game {
